--- a/CameraEmguCV/packages.config
+++ b/CameraEmguCV/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="DirectShowLib" version="1.0.0" targetFramework="net461" />
   <package id="EmguCV" version="3.1.0.1" targetFramework="net461" />
+  <package id="FluentWPF" version="0.8.0" targetFramework="net461" />
+  <package id="MaterialDesignColors" version="1.2.2" targetFramework="net461" />
+  <package id="MaterialDesignThemes" version="3.0.1" targetFramework="net461" />
   <package id="OpenTK" version="3.1.0" targetFramework="net461" />
   <package id="OpenTK.GLControl" version="3.1.0" targetFramework="net461" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net461" />
