--- a/CameraEmguCV/CameraEmguCV.csproj
+++ b/CameraEmguCV/CameraEmguCV.csproj
@@ -98,8 +98,8 @@
     </Compile>
     <Compile Include="TemplateImage.cs" />
     <Compile Include="Utils.cs" />
-    <Compile Include="CadranDefinition.xaml.cs">
-      <DependentUpon>CadranDefinition.xaml</DependentUpon>
+    <Compile Include="DialDefinition.xaml.cs">
+      <DependentUpon>DialDefinition.xaml</DependentUpon>
     </Compile>
     <Page Include="DebugWindow.xaml">
       <SubType>Designer</SubType>
@@ -118,7 +118,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="CadranDefinition.xaml">
+    <Page Include="DialDefinition.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
