--- a/CameraEmguCV/packages.config
+++ b/CameraEmguCV/packages.config
@@ -7,5 +7,6 @@
   <package id="MaterialDesignThemes" version="3.0.1" targetFramework="net461" />
   <package id="OpenTK" version="3.1.0" targetFramework="net461" />
   <package id="OpenTK.GLControl" version="3.1.0" targetFramework="net461" />
+  <package id="Tesseract" version="3.3.0" targetFramework="net461" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net461" />
 </packages>
