Added tesseract trained data for English language

--- a/CameraEmguCV/CameraEmguCV.csproj
+++ b/CameraEmguCV/CameraEmguCV.csproj
@@ -150,6 +150,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="tessdata\eng.traineddata" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
